tests/diagnostics/parser_dynamic_keyword_error.mtc
dynamic int x = 1
